
 * A snoop channel can be started with a snoopId, in the uri or query.

AMI
------------------
 * Originate now takes optional parameters ChannelId and OtherChannelId,
   used to set the UniqueId on creation.  The other id is assigned to the
   second channel when dialing LOCAL, or defaults to appending ;2 if only
   the single Id is given.

RealTime
------------------
 * A new set of Alembic scripts has been added for CDR tables. This will create
   a 'cdr' table with the default schema that Asterisk expects.

res_hep
------------------
 * A new module, res_hep, has been added, that acts as a generic packet
   capture agent for the Homer Encapsulation Protocol (HEP) version 3.
   It can be configured via hep.conf. Other modules can use res_hep to send
   message traffic to a HEP capture server.

res_hep_pjsip
------------------
 * A new module, res_hep_pjsip, has been added that will forward PJSIP
   message traffic to a HEP capture server. See res_hep for more
   information.

res_pjsip
------------------
 * transport and endpoint ToS options (tos, tos_audio, and tos_video) may now
   be set as the named set of ToS values (cs0-cs7, af11-af43, ef).

 * Added the following new CLI commands:
   - "pjsip show contacts" - list all current PJSIP contacts.
   - "pjsip show contact" - show specific information about a current PJSIP
     contact.
   - "pjsip show channel" - show detailed information about a PJSIP channel.

res_pjsip_multihomed
------------------
 * A new module, res_pjsip_multihomed handles situations where the system
   Asterisk is running out has multiple interfaces. res_pjsip_multihomed
   determines which interface should be used during message sending.

res_pjsip_pidf_digium_body_supplement
------------------
 * A new module, res_pjsip_pidf_digium_body_supplement provides NOTIFY
   request body formatting for presence support in Digium phones.

res_pjsip_send_to_voicemail
------------------